# mcp-docqa-server

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  claude_desktop_config.example.json  docker-compose.yml  mcp_host_config.example.json  pyproject.toml
.github/workflows/: ci.yml
db/: init.sql
src/docqa/: __init__.py  chunking.py  config.py  embeddings.py  models.py  retriever.py  sampledata.py  server.py
src/docqa/data/: sample_corpus.jsonl  sample_testset.jsonl
src/docqa/eval/: __init__.py  run_eval.py
src/docqa/ingest/: __init__.py  arxiv.py  cli.py  feed.py  pipeline.py  pubmed.py
src/docqa/store/: __init__.py  base.py  pgvector_store.py  sqlite_store.py
tests/: conftest.py  store_suite.py  test_arxiv.py  test_chunking.py  test_embeddings.py  test_feed.py  test_hybrid.py  test_ingest_pipeline.py  test_pgvector_store.py  test_retriever.py  test_server_tools.py  test_sqlite_store.py
